--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -20,7 +23,7 @@
     "postcss": "^8.4.38",
     "svgo": "^4.0.0",
     "tailwindcss": "^3.4.4",
-    "vite": "^7.2.2",
+    "vite": "^6.0.0",
     "vite-plugin-compression": "^0.5.1"
   }
 }
